Revision history for Perl extension SVG.

2.50  05 April, 2010
	-Fixed inline SVG generation method (bug # 43814 and 50075)
	-Fixed XML-escaped characters (bug # 53918 and 44454)
  -Fixed undef bug in findChildIndex (bug # 48932)
  -Fixed memory leaks with Scalar::Util::weaken() (bug # 54458)
  -Fixed cloning method (bug # 36194)
  -DOM::insertAtIndex() and removeAtIndex() now update the ID and element list

2.49  23 January, 2009
	-Fixed bugtracker URL in YAML

2.48  08 January, 2009
	-Improved YAML and MANIFEST for cpan testers game

2.47  15 December, 2008
	-Fixed MANIFEST - replaced Changes entry

2.46  15 December, 2008
	-Improved META.yml
	-Fixed MANIFEST
	-Removed all pointless files

2.45  15 December, 2008
	-Improved META.yml

2.44  21 April, 2008
	-Improved META.yml

2.43  21 April, 2008
	-Improved META.yml

2.42  16 April, 2008
	-Removed Makefile from MANIFEST

2.41  16 April, 2008
	-Fixed MANIFEST and added license data to the SVG.pm file

2.40  14 April, 2008
	-Changed tests to current recommendation. Moved to t/ directory.
	-Added POD and POD Coverage tests

2.39  08 April, 2008
	-Added warnings

2.38  03 April, 2008

	-Modified SVG::Element to answer a bug report in rt.perl.org by slaven
	 regarding the redefined methods warnings when SVG is used twice.
	-Fixed the POD to reflect annotation comments.

2.37  02 March, 2008
	-Added NS definitions for svg and xlink to enable xlink:href and svg: namespace usage in Firefox.

2.36  16 September, 2007
	-Fixed SVG::DOM POD

2.35  14 September, 2007
	-Fixed SVG::DOM POD

2.34  17 May 2005
	-SVG::Element - Removed elsep entry for CDATA, cdata, cdata_noxmlesc fields to get rid of
	artificial blank spaces that confuse some browsers
	-SVG::DOM - added getRootNode method
	-Added user-contributed DOM2 methods to SVG::DOM

2.33  14 May, 2005
	-fixed the xlink reference behaviour which was wrong and 
	 broke Mozilla native SVG. Fix submitted by Ian Hickson

2.32  10 October, 2004